[WIP] JAMES 3897: fixup and create ConnectionCheckFactory